<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/image_medium"
        android:layout_height="@dimen/image_medium"
        android:layout_gravity="center"
        android:src="@drawable/image2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_wait"
        android:textSize="@dimen/font_size_small" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margine_small"
        android:gravity="center"
        android:text="@string/while_we_are"
        android:textSize="@dimen/font_size_medium" />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margine_small" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margine_small"
        android:background="@color/colorButton"
        android:text="@string/here_is_your"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/image"
        android:layout_weight="1"
        android:padding="@dimen/margine_small"
        android:text="@string/message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:src="@drawable/image3" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:src="@drawable/image4" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:src="@drawable/image5" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:src="@drawable/image6" />
    </LinearLayout>


</LinearLayout>